// Proto version, proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes will be stored
package com.group4.miniproject3.stubs.book;
// Generate multiple files with Java classes rather than a single file
option java_multiple_files = true;
option java_generic_services = true;

// Definition of Request message and its parameters
message BookRequest
{
  string id = 1;
}

// Definition of the Response message and its parameters, which are given numbers of order
message BookResponse
{
  string id = 1;
  string name = 2;
  string author = 3;
  string description = 4;
  string ISBN = 5;
  string price = 6;
}

// Here we define the overall service contract, StudentRequest and StudentResponse defined above
// The name of the service is StudentService, getStudentInfo() is an operation it can provide to a remote call
service BookService
{
  rpc getBookById(BookRequest) returns (BookResponse);
}